<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">StrengthPal</string>
    <string name="fragment_default">Spread swoleness, not hate</string>
    <string name="action_settings">Settings</string>

    <string-array name="drawer_options">
        <item>Workout History</item>
        <item>Find a Gym</item>
        <item>Workouts</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>

    <array name="drawer_icons">
        <item>@drawable/ic_history</item>
        <item>@drawable/ic_map</item>
        <item>@drawable/ic_workout</item>
        <item>@drawable/ic_settings</item>
        <item>@drawable/ic_about</item>
    </array>

    <string name="drawer_open">Open the Navigation Drawer</string>
    <string name="drawer_close">Close the Navigation Drawer</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="enter_exercise">Exercise</string>
    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="new_workout">New Workout</string>
    <string name="weight">Weight</string>

    <!-- strings for programs -->
    <string name="starting_strength">Starting Strength</string>
    <string name="strong_lifts">StrongLifts 5x5</string>
    <string name="wendler">Wendler 5/3/1</string>
    <string name="phat">Layne Norton P.H.A.T.</string>

    <!-- strings for different exercises for programs -->
    <string name="power_clean">Power clean</string>

    <!-- Back-->
    <string name="deadlift">Deadlift</string>
    <string name="chin_up">Chin up</string>
    <string name="barbell_row">Barbell row</string>
    <string name="db_rows">Dumbbell rows</string>
    <string name="lat_pulldown">Lat pulldown</string>
    <string name="seated_row">Seated cable row</string>


    <!--Chest-->
    <string name="bench_press">Bench press</string>
    <string name="dumbbell_flys">Dumbbell chest flys</string>
    <string name="incline_bench">Incline bench press</string>
    <string name="dips">Dips</string>
    <string name="flat_db_bench">Flat dumbbell bench press</string>


    <!--legs-->
    <string name="squat">Barbell Squat</string>
    <string name="rdl">Romanian deadlift</string>
    <string name="leg_extension">Leg extension</string>
    <string name="leg_curls">Leg curls</string>
    <string name="leg_press">Leg press</string>
    <string name="calf_raises">Calf raises</string>

    <!--shoulders and arms-->
    <string name="overhead_press">Overhead press</string>
    <string name="db_shoulder_press">Dumbbell shoulder press</string>
    <string name="db_lateral_raises">Dumbbell lateral raises</string>
    <string name="bb_curls">Barbell curls</string>
    <string name="db_curls">Dumbbell curl</string>
    <string name="hammer_curl">Hammer curls</string>
    <string name="skulL_crusher">Skull crushers</string>
    <string name="tricep_pushdown">Tricep pushdowns</string>
    <string name="preacher_curl">Preacher curls</string>

    <!--abs-->
    <string name="leg_raises">Hanging leg raises</string>
    <string name="ab_wheel">Ab wheel</string>
    <string name="planks">Planks</string>



    <string name="title_activity_new_workout">New Workout</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_info">Created with love, sweat, tears by Tyler Corley, Noah Cho, and Even Hvatum. Copyright 2014 All Rights Reserved.
    It\'s not perfect yet so please don\'t hurt us. </string>

    <!-- strings for map search -->
    <string name="button_map_view">View on the map</string>
    <string name="button_list_view">View as a list</string>
    <string name="map_list_header">Nearby Gyms</string>
    <string name="searching_gyms">Searching for gyms...</string>
    <string name="no_signal">No network detected</string>
    <string name="no_results">Unable to find local gyms</string>

    <!-- strings for actionbar items in new workout -->
    <string name="add_exercise">Add Exercise</string>
    <string name="save">Save Workout</string>

</resources>
