<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_workout_row_detail_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:width="100dp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_weight="1"
        android:textSize="20sp"
        android:text="@string/enter_exercise"/>

    <TextView
        android:id="@+id/weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_weight="1"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/weight"/>

    <TextView
        android:id="@+id/reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_weight="1"
        android:textSize="20sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/reps"/>

    <TextView
        android:id="@+id/sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:textSize="20sp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/sets"/>


</LinearLayout>