<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/new_workout_row_detail_2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <EditText
        android:id="@+id/enter_exercise_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:maxLines="1"
        android:width="100dp"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_weight="1"
        android:hint="@string/enter_exercise"/>

    <EditText
        android:id="@+id/enter_weight_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:inputType="number"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/weight"/>

    <EditText
        android:id="@+id/enter_reps_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:lines="1"
        android:inputType="number"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/reps"/>

    <EditText
        android:id="@+id/enter_sets_text_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:inputType="number"
        android:lines="1"
        android:maxLines="1"
        android:scrollHorizontally="true"
        android:ellipsize="end"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/sets"/>


</LinearLayout>