<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D6D2C4">

    <TextView
        android:id="@+id/workoutsLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:text="Workout Selector"/>

    <ImageView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_workout"
        android:id="@+id/imageView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/starting_strength_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:textSize="30sp"
                android:background="@drawable/epic_button"
                android:textColor="@drawable/white_button_text"
                android:text="@string/starting_strength"/>

            <Button
                android:id="@+id/strong_lifts_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:textSize="30sp"
                android:background="@drawable/epic_button"
                android:textColor="@drawable/white_button_text"
                android:text="@string/strong_lifts"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/wendler_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:textSize="30sp"
                android:background="@drawable/epic_button"
                android:textColor="@drawable/white_button_text"
                android:text="@string/wendler"/>

            <Button
                android:id="@+id/phat_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="1dp"
                android:textSize="30sp"
                android:background="@drawable/epic_button"
                android:textColor="@drawable/white_button_text"
                android:text="@string/phat"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
